@@ -151,48 +151,6 @@ FFMPEG_CODECS		ffCodecs[] =
 	{ &MEDIASUBTYPE_DIVX, CODEC_ID_MPEG4,  MAKEFOURCC('D','I','V','X'),	NULL },
 	{ &MEDIASUBTYPE_divx, CODEC_ID_MPEG4,  MAKEFOURCC('d','i','v','x'),	NULL },
 
-	// Other MPEG-4
-	{ &MEDIASUBTYPE_MP4V, CODEC_ID_MPEG4,  MAKEFOURCC('M','P','4','V'),	NULL },
-	{ &MEDIASUBTYPE_mp4v, CODEC_ID_MPEG4,  MAKEFOURCC('m','p','4','v'),	NULL },
-	{ &MEDIASUBTYPE_M4S2, CODEC_ID_MPEG4,  MAKEFOURCC('M','4','S','2'),	NULL },
-	{ &MEDIASUBTYPE_m4s2, CODEC_ID_MPEG4,  MAKEFOURCC('m','4','s','2'),	NULL },
-	{ &MEDIASUBTYPE_MP4S, CODEC_ID_MPEG4,  MAKEFOURCC('M','P','4','S'),	NULL },
-	{ &MEDIASUBTYPE_mp4s, CODEC_ID_MPEG4,  MAKEFOURCC('m','p','4','s'),	NULL },
-	{ &MEDIASUBTYPE_3IV1, CODEC_ID_MPEG4,  MAKEFOURCC('3','I','V','1'),	NULL },
-	{ &MEDIASUBTYPE_3iv1, CODEC_ID_MPEG4,  MAKEFOURCC('3','i','v','1'),	NULL },
-	{ &MEDIASUBTYPE_3IV2, CODEC_ID_MPEG4,  MAKEFOURCC('3','I','V','2'),	NULL },
-	{ &MEDIASUBTYPE_3iv2, CODEC_ID_MPEG4,  MAKEFOURCC('3','i','v','2'),	NULL },
-	{ &MEDIASUBTYPE_3IVX, CODEC_ID_MPEG4,  MAKEFOURCC('3','I','V','X'),	NULL },
-	{ &MEDIASUBTYPE_3ivx, CODEC_ID_MPEG4,  MAKEFOURCC('3','i','v','x'),	NULL },
-	{ &MEDIASUBTYPE_BLZ0, CODEC_ID_MPEG4,  MAKEFOURCC('B','L','Z','0'),	NULL },
-	{ &MEDIASUBTYPE_blz0, CODEC_ID_MPEG4,  MAKEFOURCC('b','l','z','0'),	NULL },
-	{ &MEDIASUBTYPE_DM4V, CODEC_ID_MPEG4,  MAKEFOURCC('D','M','4','V'),	NULL },
-	{ &MEDIASUBTYPE_dm4v, CODEC_ID_MPEG4,  MAKEFOURCC('d','m','4','v'),	NULL },
-	{ &MEDIASUBTYPE_FFDS, CODEC_ID_MPEG4,  MAKEFOURCC('F','F','D','S'),	NULL },
-	{ &MEDIASUBTYPE_ffds, CODEC_ID_MPEG4,  MAKEFOURCC('f','f','d','s'),	NULL },
-	{ &MEDIASUBTYPE_FVFW, CODEC_ID_MPEG4,  MAKEFOURCC('F','V','F','W'),	NULL },
-	{ &MEDIASUBTYPE_fvfw, CODEC_ID_MPEG4,  MAKEFOURCC('f','v','f','w'),	NULL },
-	{ &MEDIASUBTYPE_DXGM, CODEC_ID_MPEG4,  MAKEFOURCC('D','X','G','M'),	NULL },
-	{ &MEDIASUBTYPE_dxgm, CODEC_ID_MPEG4,  MAKEFOURCC('d','x','g','m'),	NULL },
-	{ &MEDIASUBTYPE_FMP4, CODEC_ID_MPEG4,  MAKEFOURCC('F','M','P','4'),	NULL },
-	{ &MEDIASUBTYPE_fmp4, CODEC_ID_MPEG4,  MAKEFOURCC('f','m','p','4'),	NULL },
-	{ &MEDIASUBTYPE_HDX4, CODEC_ID_MPEG4,  MAKEFOURCC('H','D','X','4'),	NULL },
-	{ &MEDIASUBTYPE_hdx4, CODEC_ID_MPEG4,  MAKEFOURCC('h','d','x','4'),	NULL },
-	{ &MEDIASUBTYPE_LMP4, CODEC_ID_MPEG4,  MAKEFOURCC('L','M','P','4'),	NULL },
-	{ &MEDIASUBTYPE_lmp4, CODEC_ID_MPEG4,  MAKEFOURCC('l','m','p','4'),	NULL },
-	{ &MEDIASUBTYPE_NDIG, CODEC_ID_MPEG4,  MAKEFOURCC('N','D','I','G'),	NULL },
-	{ &MEDIASUBTYPE_ndig, CODEC_ID_MPEG4,  MAKEFOURCC('n','d','i','g'),	NULL },
-	{ &MEDIASUBTYPE_RMP4, CODEC_ID_MPEG4,  MAKEFOURCC('R','M','P','4'),	NULL },
-	{ &MEDIASUBTYPE_rmp4, CODEC_ID_MPEG4,  MAKEFOURCC('r','m','p','4'),	NULL },
-	{ &MEDIASUBTYPE_SMP4, CODEC_ID_MPEG4,  MAKEFOURCC('S','M','P','4'),	NULL },
-	{ &MEDIASUBTYPE_smp4, CODEC_ID_MPEG4,  MAKEFOURCC('s','m','p','4'),	NULL },
-	{ &MEDIASUBTYPE_SEDG, CODEC_ID_MPEG4,  MAKEFOURCC('S','E','D','G'),	NULL },
-	{ &MEDIASUBTYPE_sedg, CODEC_ID_MPEG4,  MAKEFOURCC('s','e','d','g'),	NULL },
-	{ &MEDIASUBTYPE_UMP4, CODEC_ID_MPEG4,  MAKEFOURCC('U','M','P','4'),	NULL },
-	{ &MEDIASUBTYPE_ump4, CODEC_ID_MPEG4,  MAKEFOURCC('u','m','p','4'),	NULL },
-	{ &MEDIASUBTYPE_WV1F, CODEC_ID_MPEG4,  MAKEFOURCC('W','V','1','F'),	NULL },
-	{ &MEDIASUBTYPE_wv1f, CODEC_ID_MPEG4,  MAKEFOURCC('w','v','1','f'),	NULL },
-
 	// WMV1/2/3
 	{ &MEDIASUBTYPE_WMV1, CODEC_ID_WMV1,  MAKEFOURCC('W','M','V','1'),	NULL },
 	{ &MEDIASUBTYPE_wmv1, CODEC_ID_WMV1,  MAKEFOURCC('w','m','v','1'),	NULL },
@@ -264,7 +222,50 @@ FFMPEG_CODECS		ffCodecs[] =
 
 	// WVC1
 	{ &MEDIASUBTYPE_WVC1, CODEC_ID_VC1,  MAKEFOURCC('W','V','C','1'),	&DXVA_VC1 },
-	{ &MEDIASUBTYPE_wvc1, CODEC_ID_VC1,  MAKEFOURCC('w','v','c','1'),	&DXVA_VC1 }
+	{ &MEDIASUBTYPE_wvc1, CODEC_ID_VC1,  MAKEFOURCC('w','v','c','1'),	&DXVA_VC1 },
+
+
+	// Other MPEG-4
+	{ &MEDIASUBTYPE_MP4V, CODEC_ID_MPEG4,  MAKEFOURCC('M','P','4','V'),	NULL },
+	{ &MEDIASUBTYPE_mp4v, CODEC_ID_MPEG4,  MAKEFOURCC('m','p','4','v'),	NULL },
+	{ &MEDIASUBTYPE_M4S2, CODEC_ID_MPEG4,  MAKEFOURCC('M','4','S','2'),	NULL },
+	{ &MEDIASUBTYPE_m4s2, CODEC_ID_MPEG4,  MAKEFOURCC('m','4','s','2'),	NULL },
+	{ &MEDIASUBTYPE_MP4S, CODEC_ID_MPEG4,  MAKEFOURCC('M','P','4','S'),	NULL },
+	{ &MEDIASUBTYPE_mp4s, CODEC_ID_MPEG4,  MAKEFOURCC('m','p','4','s'),	NULL },
+	{ &MEDIASUBTYPE_3IV1, CODEC_ID_MPEG4,  MAKEFOURCC('3','I','V','1'),	NULL },
+	{ &MEDIASUBTYPE_3iv1, CODEC_ID_MPEG4,  MAKEFOURCC('3','i','v','1'),	NULL },
+	{ &MEDIASUBTYPE_3IV2, CODEC_ID_MPEG4,  MAKEFOURCC('3','I','V','2'),	NULL },
+	{ &MEDIASUBTYPE_3iv2, CODEC_ID_MPEG4,  MAKEFOURCC('3','i','v','2'),	NULL },
+	{ &MEDIASUBTYPE_3IVX, CODEC_ID_MPEG4,  MAKEFOURCC('3','I','V','X'),	NULL },
+	{ &MEDIASUBTYPE_3ivx, CODEC_ID_MPEG4,  MAKEFOURCC('3','i','v','x'),	NULL },
+	{ &MEDIASUBTYPE_BLZ0, CODEC_ID_MPEG4,  MAKEFOURCC('B','L','Z','0'),	NULL },
+	{ &MEDIASUBTYPE_blz0, CODEC_ID_MPEG4,  MAKEFOURCC('b','l','z','0'),	NULL },
+	{ &MEDIASUBTYPE_DM4V, CODEC_ID_MPEG4,  MAKEFOURCC('D','M','4','V'),	NULL },
+	{ &MEDIASUBTYPE_dm4v, CODEC_ID_MPEG4,  MAKEFOURCC('d','m','4','v'),	NULL },
+	{ &MEDIASUBTYPE_FFDS, CODEC_ID_MPEG4,  MAKEFOURCC('F','F','D','S'),	NULL },
+	{ &MEDIASUBTYPE_ffds, CODEC_ID_MPEG4,  MAKEFOURCC('f','f','d','s'),	NULL },
+	{ &MEDIASUBTYPE_FVFW, CODEC_ID_MPEG4,  MAKEFOURCC('F','V','F','W'),	NULL },
+	{ &MEDIASUBTYPE_fvfw, CODEC_ID_MPEG4,  MAKEFOURCC('f','v','f','w'),	NULL },
+	{ &MEDIASUBTYPE_DXGM, CODEC_ID_MPEG4,  MAKEFOURCC('D','X','G','M'),	NULL },
+	{ &MEDIASUBTYPE_dxgm, CODEC_ID_MPEG4,  MAKEFOURCC('d','x','g','m'),	NULL },
+	{ &MEDIASUBTYPE_FMP4, CODEC_ID_MPEG4,  MAKEFOURCC('F','M','P','4'),	NULL },
+	{ &MEDIASUBTYPE_fmp4, CODEC_ID_MPEG4,  MAKEFOURCC('f','m','p','4'),	NULL },
+	{ &MEDIASUBTYPE_HDX4, CODEC_ID_MPEG4,  MAKEFOURCC('H','D','X','4'),	NULL },
+	{ &MEDIASUBTYPE_hdx4, CODEC_ID_MPEG4,  MAKEFOURCC('h','d','x','4'),	NULL },
+	{ &MEDIASUBTYPE_LMP4, CODEC_ID_MPEG4,  MAKEFOURCC('L','M','P','4'),	NULL },
+	{ &MEDIASUBTYPE_lmp4, CODEC_ID_MPEG4,  MAKEFOURCC('l','m','p','4'),	NULL },
+	{ &MEDIASUBTYPE_NDIG, CODEC_ID_MPEG4,  MAKEFOURCC('N','D','I','G'),	NULL },
+	{ &MEDIASUBTYPE_ndig, CODEC_ID_MPEG4,  MAKEFOURCC('n','d','i','g'),	NULL },
+	{ &MEDIASUBTYPE_RMP4, CODEC_ID_MPEG4,  MAKEFOURCC('R','M','P','4'),	NULL },
+	{ &MEDIASUBTYPE_rmp4, CODEC_ID_MPEG4,  MAKEFOURCC('r','m','p','4'),	NULL },
+	{ &MEDIASUBTYPE_SMP4, CODEC_ID_MPEG4,  MAKEFOURCC('S','M','P','4'),	NULL },
+	{ &MEDIASUBTYPE_smp4, CODEC_ID_MPEG4,  MAKEFOURCC('s','m','p','4'),	NULL },
+	{ &MEDIASUBTYPE_SEDG, CODEC_ID_MPEG4,  MAKEFOURCC('S','E','D','G'),	NULL },
+	{ &MEDIASUBTYPE_sedg, CODEC_ID_MPEG4,  MAKEFOURCC('s','e','d','g'),	NULL },
+	{ &MEDIASUBTYPE_UMP4, CODEC_ID_MPEG4,  MAKEFOURCC('U','M','P','4'),	NULL },
+	{ &MEDIASUBTYPE_ump4, CODEC_ID_MPEG4,  MAKEFOURCC('u','m','p','4'),	NULL },
+	{ &MEDIASUBTYPE_WV1F, CODEC_ID_MPEG4,  MAKEFOURCC('W','V','1','F'),	NULL },
+	{ &MEDIASUBTYPE_wv1f, CODEC_ID_MPEG4,  MAKEFOURCC('w','v','1','f'),	NULL },
 };
 
 /* Important: the order should be exactly the same as in ffCodecs[] */
@@ -303,48 +304,6 @@ const AMOVIESETUP_MEDIATYPE CMPCVideoDecFilter::sudPinTypesIn[] =
 	{ &MEDIATYPE_Video, &MEDIASUBTYPE_dx50   },
 	{ &MEDIATYPE_Video, &MEDIASUBTYPE_DIVX   },
 	{ &MEDIATYPE_Video, &MEDIASUBTYPE_divx   },
-
-	// Other MPEG-4
-	{ &MEDIATYPE_Video, &MEDIASUBTYPE_MP4V   },
-	{ &MEDIATYPE_Video, &MEDIASUBTYPE_mp4v   },
-	{ &MEDIATYPE_Video, &MEDIASUBTYPE_M4S2   },
-	{ &MEDIATYPE_Video, &MEDIASUBTYPE_m4s2   },
-	{ &MEDIATYPE_Video, &MEDIASUBTYPE_MP4S   },
-	{ &MEDIATYPE_Video, &MEDIASUBTYPE_mp4s   },
-	{ &MEDIATYPE_Video, &MEDIASUBTYPE_3IV1   },
-	{ &MEDIATYPE_Video, &MEDIASUBTYPE_3iv1   },
-	{ &MEDIATYPE_Video, &MEDIASUBTYPE_3IV2   },
-	{ &MEDIATYPE_Video, &MEDIASUBTYPE_3iv2   },
-	{ &MEDIATYPE_Video, &MEDIASUBTYPE_3IVX   },
-	{ &MEDIATYPE_Video, &MEDIASUBTYPE_3ivx   },
-	{ &MEDIATYPE_Video, &MEDIASUBTYPE_BLZ0   },
-	{ &MEDIATYPE_Video, &MEDIASUBTYPE_blz0   },
-	{ &MEDIATYPE_Video, &MEDIASUBTYPE_DM4V   },
-	{ &MEDIATYPE_Video, &MEDIASUBTYPE_dm4v   },
-	{ &MEDIATYPE_Video, &MEDIASUBTYPE_FFDS   },
-	{ &MEDIATYPE_Video, &MEDIASUBTYPE_ffds   },
-	{ &MEDIATYPE_Video, &MEDIASUBTYPE_FVFW   },
-	{ &MEDIATYPE_Video, &MEDIASUBTYPE_fvfw   },
-	{ &MEDIATYPE_Video, &MEDIASUBTYPE_DXGM   },
-	{ &MEDIATYPE_Video, &MEDIASUBTYPE_dxgm   },
-	{ &MEDIATYPE_Video, &MEDIASUBTYPE_FMP4   },
-	{ &MEDIATYPE_Video, &MEDIASUBTYPE_fmp4   },
-	{ &MEDIATYPE_Video, &MEDIASUBTYPE_HDX4   },
-	{ &MEDIATYPE_Video, &MEDIASUBTYPE_hdx4   },
-	{ &MEDIATYPE_Video, &MEDIASUBTYPE_LMP4   },
-	{ &MEDIATYPE_Video, &MEDIASUBTYPE_lmp4   },
-	{ &MEDIATYPE_Video, &MEDIASUBTYPE_NDIG   },
-	{ &MEDIATYPE_Video, &MEDIASUBTYPE_ndig   },
-	{ &MEDIATYPE_Video, &MEDIASUBTYPE_RMP4   },
-	{ &MEDIATYPE_Video, &MEDIASUBTYPE_rmp4   },
-	{ &MEDIATYPE_Video, &MEDIASUBTYPE_SMP4   },
-	{ &MEDIATYPE_Video, &MEDIASUBTYPE_smp4   },
-	{ &MEDIATYPE_Video, &MEDIASUBTYPE_SEDG   },
-	{ &MEDIATYPE_Video, &MEDIASUBTYPE_sedg   },
-	{ &MEDIATYPE_Video, &MEDIASUBTYPE_UMP4   },
-	{ &MEDIATYPE_Video, &MEDIASUBTYPE_ump4   },
-	{ &MEDIATYPE_Video, &MEDIASUBTYPE_WV1F   },
-	{ &MEDIATYPE_Video, &MEDIASUBTYPE_wv1f   },
 
 	// WMV1/2/3
 	{ &MEDIATYPE_Video, &MEDIASUBTYPE_WMV1   },
@@ -417,9 +376,55 @@ const AMOVIESETUP_MEDIATYPE CMPCVideoDecFilter::sudPinTypesIn[] =
 
 	// VC1
 	{ &MEDIATYPE_Video, &MEDIASUBTYPE_WVC1   },
-	{ &MEDIATYPE_Video, &MEDIASUBTYPE_wvc1   }
+	{ &MEDIATYPE_Video, &MEDIASUBTYPE_wvc1   },
+
+	// IMPORTANT : some of the last MediaTypes present in next group may be not available in
+	// the standalone filter (workaround to prevent GraphEdit crash).
+	// Other MPEG-4
+	{ &MEDIATYPE_Video, &MEDIASUBTYPE_MP4V   },
+	{ &MEDIATYPE_Video, &MEDIASUBTYPE_mp4v   },
+	{ &MEDIATYPE_Video, &MEDIASUBTYPE_M4S2   },
+	{ &MEDIATYPE_Video, &MEDIASUBTYPE_m4s2   },
+	{ &MEDIATYPE_Video, &MEDIASUBTYPE_MP4S   },
+	{ &MEDIATYPE_Video, &MEDIASUBTYPE_mp4s   },
+	{ &MEDIATYPE_Video, &MEDIASUBTYPE_3IV1   },
+	{ &MEDIATYPE_Video, &MEDIASUBTYPE_3iv1   },
+	{ &MEDIATYPE_Video, &MEDIASUBTYPE_3IV2   },
+	{ &MEDIATYPE_Video, &MEDIASUBTYPE_3iv2   },
+	{ &MEDIATYPE_Video, &MEDIASUBTYPE_3IVX   },
+	{ &MEDIATYPE_Video, &MEDIASUBTYPE_3ivx   },
+	{ &MEDIATYPE_Video, &MEDIASUBTYPE_BLZ0   },
+	{ &MEDIATYPE_Video, &MEDIASUBTYPE_blz0   },
+	{ &MEDIATYPE_Video, &MEDIASUBTYPE_DM4V   },
+	{ &MEDIATYPE_Video, &MEDIASUBTYPE_dm4v   },
+	{ &MEDIATYPE_Video, &MEDIASUBTYPE_FFDS   },
+	{ &MEDIATYPE_Video, &MEDIASUBTYPE_ffds   },
+	{ &MEDIATYPE_Video, &MEDIASUBTYPE_FVFW   },
+	{ &MEDIATYPE_Video, &MEDIASUBTYPE_fvfw   },
+	{ &MEDIATYPE_Video, &MEDIASUBTYPE_DXGM   },
+	{ &MEDIATYPE_Video, &MEDIASUBTYPE_dxgm   },
+	{ &MEDIATYPE_Video, &MEDIASUBTYPE_FMP4   },
+	{ &MEDIATYPE_Video, &MEDIASUBTYPE_fmp4   },
+	{ &MEDIATYPE_Video, &MEDIASUBTYPE_HDX4   },
+	{ &MEDIATYPE_Video, &MEDIASUBTYPE_hdx4   },
+	{ &MEDIATYPE_Video, &MEDIASUBTYPE_LMP4   },
+	{ &MEDIATYPE_Video, &MEDIASUBTYPE_lmp4   },
+	{ &MEDIATYPE_Video, &MEDIASUBTYPE_NDIG   },
+	{ &MEDIATYPE_Video, &MEDIASUBTYPE_ndig   },
+	{ &MEDIATYPE_Video, &MEDIASUBTYPE_RMP4   },
+	{ &MEDIATYPE_Video, &MEDIASUBTYPE_rmp4   },
+	{ &MEDIATYPE_Video, &MEDIASUBTYPE_SMP4   },
+	{ &MEDIATYPE_Video, &MEDIASUBTYPE_smp4   },
+	{ &MEDIATYPE_Video, &MEDIASUBTYPE_SEDG   },
+	{ &MEDIATYPE_Video, &MEDIASUBTYPE_sedg   },
+	{ &MEDIATYPE_Video, &MEDIASUBTYPE_UMP4   },
+	{ &MEDIATYPE_Video, &MEDIASUBTYPE_ump4   },
+	{ &MEDIATYPE_Video, &MEDIASUBTYPE_WV1F   },
+	{ &MEDIATYPE_Video, &MEDIASUBTYPE_wv1f   }
 };
-const int CMPCVideoDecFilter::sudPinTypesInCount = countof(CMPCVideoDecFilter::sudPinTypesIn);
+
+// Workaround : graphedit crash when filter expose more than 115 input MediaTypes !
+const int CMPCVideoDecFilter::sudPinTypesInCount = 115; //countof(CMPCVideoDecFilter::sudPinTypesIn);
 
 
 const AMOVIESETUP_MEDIATYPE CMPCVideoDecFilter::sudPinTypesOut[] =
