@@ -7,6 +7,7 @@ v1.x.x.x - unreleased
  FIXED  : Crash with CoreAVC when changing "prefered decoder" setting during playback
  FIXED  : Missing checkmarks on "tearing test" and "display stats" options (bug #2010857)
  FIXED  : Save image/thumbnail not working with EVR (bug #2010681)
+ FIXED  : Workaround to prevent GraphEdit crash when MpcVideoDec.ax was registered (when opening menu "Graph/Insert filter/Direct show filters")
 
 v1.1.604.0 - 28 June 2008
 ======================
